--- a/src/pages/UI-kit/ColorsType/colorsType.pug
+++ b/src/pages/UI-kit/ColorsType/colorsType.pug
@@ -1,10 +1,14 @@
-<!DOCTYPE html>
-html(lang="en")
+include ../../../../src/components/block-color/block-color.pug
+
+
+doctype html
+html(lang="ru")
     head
         meta(charset="UTF-8")
         meta(name="viewport", content="width=device-width, initial-scale=1.0")
         meta(http-equiv="X-UA-Compatible", content="ie=edge")
-        link(rel="stylesheet", href="./colorsType.sass")
+        link(rel="stylesheet", href="./colorsType.scss")
         title Colors&Type
     body
-        h1 hello!!      
+      .blocks-color    
+        +block-color({color: "dark_shade-100", text1: "text1", text2: "text2"})
