--- a/src/components/block-color/block-color.pug
+++ b/src/components/block-color/block-color.pug
@@ -1,7 +1,7 @@
-mixin block-color(options)
+mixin block-color(color, name, rgb)
 
   .block-color
-    .block-color__color(class="block-color__color-" + options.color)
-    .block-color__text
-      .block-color__text__text1= options.text1
-      .block-color__text__text2= options.text2
+    .block-color__color(class="block-color__color-" + color)
+    .block-color__description
+      p(class="block-color__description__name text")= name
+      p(class="block-color__description__rgb text")= rgb
