--- a/src/components/block-color/block-color.scss
+++ b/src/components/block-color/block-color.scss
@@ -1,3 +1,8 @@
+@import '../../scss/colors.scss';
+@import '../../scss/fonts.scss';
+.text {
+  margin: 0;
+}
 .block-color {
   display: flex;
   font-size: 19px;
@@ -8,41 +13,42 @@
     border-radius: 6px;
     
     &-dark_shade-100 {
-      background-color: #1F2041;
+      background-color: $dark-shade-100;
     }
 
     &-dark_shade-75 {
-      background-color: black;
+      background-color: $dark-shade-75;
     }
 
     &-dark_shade-50 {
-      background-color: black;
+      background-color: $dark-shade-50;
     }
 
     &-dark_shade-25 {
-      background-color: black;
+      background-color: $dark-shade-25;
     }
 
     &-dark_shade-5 {
-      background-color: black;
+      background-color: $dark-shade-5;
     }
 
     &-purple {
-      background-color: black;
+      background-color: $purple;
     }
 
     &-green {
-      background-color: black;
+      background-color: $green;
     }
   }
-  &__text {
+  &__description {
     padding: 8px 0 0 40px;
-    &__text1 {
+    &__name {
+      font-family: Quicksand, arial, sans-serif;
       font-weight: bold;
     }
-    &__text2 {
+    &__rgb {
+      font-family: Quicksand, arial, sans-serif;
+      font-weight: normal;
     }
   } 
-  
-  background-color: red;
 }
