--- a/src/components/type/type.scss
+++ b/src/components/type/type.scss
@@ -1,6 +1,8 @@
 .type {
+  display: flex;
   &__text {
     margin: 0;
+    margin-left: 30px;
     &_H1 {
       font-size: 24px;
       font-family: $quicksand;
@@ -25,16 +27,15 @@
       font-family: $montserrat;
       font-weight: normal;
       color: $dark-shade-75;
+      line-height: 24px;
     }
   }
   &__span {
-    display: inline-block;
     min-width: 37px;
     text-align: right;
     color: $dark-shade-25;
     font-family: $montserrat;
     font-weight: normal;
-    margin-right: 30px;
     &_H1 {
       font-size: 24px;
     }
