--- a/src/components/block-color/block-color.scss
+++ b/src/components/block-color/block-color.scss
@@ -1,5 +1,3 @@
-@import '../../scss/colors.scss';
-@import '../../scss/fonts.scss';
 .text {
   margin: 0;
 }
@@ -43,11 +41,11 @@
   &__description {
     padding: 8px 0 0 40px;
     &__name {
-      font-family: Quicksand, arial, sans-serif;
+      font-family: $quicksand;
       font-weight: bold;
     }
     &__rgb {
-      font-family: Quicksand, arial, sans-serif;
+      font-family: $quicksand;
       font-weight: normal;
     }
   } 
