A few refactoring colors-type

--- a/src/components/block-color/block-color.pug
+++ b/src/components/block-color/block-color.pug
@@ -1,4 +1,4 @@
-mixin block-color(color, name, rgb)
+mixin block-color({color, name, rgb})
 
   .block-color(class!=attributes.class)
     .block-color__color(class="block-color__color-" + color)
