--- a/src/pages/UI-kit/colors-type/colors-type.pug
+++ b/src/pages/UI-kit/colors-type/colors-type.pug
@@ -15,27 +15,27 @@ html(lang="ru")
       .logo1
         +logo()
       .colors-type
-        .colors-type__blocks-color 
-          .colors-type__blocks-color__block-color   
+        .blocks-color 
+          .blocks-color__block-color   
             +block-color({color: "dark_shade-100", name: "Dark Shade 100%", rgb: "#1F2041"})
-          .colors-type__blocks-color__block-color 
+          .blocks-color__block-color 
             +block-color({color: "dark_shade-75", name: "Dark Shade 75%", rgb: "#1F2041"})
-          .colors-type__blocks-color__block-color 
+          .blocks-color__block-color 
             +block-color({color: "dark_shade-50", name: "Dark Shade 50%", rgb: "#1F2041"})
-          .colors-type__blocks-color__block-color 
+          .blocks-color__block-color 
             +block-color({color: "dark_shade-25", name: "Dark Shade 25%", rgb: "#1F2041"})
-          .colors-type__blocks-color__block-color 
+          .blocks-color__block-color 
             +block-color({color: "dark_shade-5", name: "Dark Shade 5%", rgb: "#1F2041"})
-          .colors-type__blocks-color__block-color 
+          .blocks-color__block-color 
             +block-color({color: "purple", name: "Purple", rgb: "#BC9CFF"})
-          .colors-type__blocks-color__block-color 
+          .blocks-color__block-color 
             +block-color({color: "green", name: "Green", rgb: "#6FCF97"})
-        .colors-type__types
-          .colors-type__types__type
+        .types
+          .types__type
             +type({title: "H1", text: "This one is the sub-section or widget title"})
-          .colors-type__types__type
+          .types__type
             +type({title: "H2", text: "Next one is the item title inside widgets"})
-          .colors-type__types__type
+          .types__type
             +type({title: "H3", text: "This is a label or CTA text"})
-          .colors-type__types__type
+          .types__type
             +type({title: "body", text: "This is the body text which is used for most of the design, like paragraphs, lists, etc."})
