--- a/src/components/block-color/block-color.scss
+++ b/src/components/block-color/block-color.scss
@@ -1,6 +1,3 @@
-.text {
-  margin: 0;
-}
 .block-color {
   display: flex;
   font-size: 19px;
@@ -40,13 +37,16 @@
   }
   &__description {
     padding: 8px 0 0 40px;
-    &__name {
-      font-family: $quicksand;
-      font-weight: bold;
-    }
-    &__rgb {
-      font-family: $quicksand;
-      font-weight: normal;
-    }
+  }
+  &__text{
+    margin: 0;
   } 
+  &__name {
+    font-family: $quicksand;
+    font-weight: bold;
+  }
+  &__rgb {
+    font-family: $quicksand;
+    font-weight: normal;
+  }
 }
