--- a/src/pages/UI-kit/Form-Elements/form-elements.scss
+++ b/src/pages/UI-kit/Form-Elements/form-elements.scss
@@ -2,14 +2,12 @@
 @import '../../../scss/colors.scss';
 @import '../../../components/logo/logo.scss';
 @import '../../../components/text-field/text-field.scss';
+@import '../../../components/abouts-room/abouts-room.scss';
 
 body {
   max-width: 1440px;
   margin: 0 auto;
 }
 .test{
-  width: 320px;
-}
-.test1 {
-  width: 267px;
+  width: 280px;
 }
