--- a/src/components/abouts-room/abouts-room.scss
+++ b/src/components/abouts-room/abouts-room.scss
@@ -2,6 +2,7 @@
   display: flex;
   border-bottom: 1px solid $dark-shade-1;
   margin-bottom: 20px;
+  width: 100%;
   &:last-child{
     margin-bottom: 0px;
   }
