--- a/src/pages/UI-kit/Form-Elements/form-elements.scss
+++ b/src/pages/UI-kit/Form-Elements/form-elements.scss
@@ -3,6 +3,7 @@
 @import '../../../components/logo/logo.scss';
 @import '../../../components/text-field/text-field.scss';
 @import '../../../components/abouts-room/abouts-room.scss';
+@import '../../../components/checkbox/checkbox.scss';
 
 body {
   max-width: 1440px;
