--- a/src/components/checkbox/checkbox.scss
+++ b/src/components/checkbox/checkbox.scss
@@ -1,11 +1,16 @@
 .checkbox{
-  padding: 20px;
+  margin-bottom: 10.5px;
+  &:last-child{
+    margin-bottom: 0;
+  }
   &__label{
+    display: inline-block;
+    padding-left: 30px;
     font-family: $montserrat;
     font-size: 14px;
+    line-height: 20px;
     color: $dark-shade-50;
-    padding-left: 30px;
-    vertical-align: middle;
+    cursor: pointer;
   }
   &__input{
     position: absolute;
