--- a/src/pages/UI-kit/Form-Elements/form-elements.pug
+++ b/src/pages/UI-kit/Form-Elements/form-elements.pug
@@ -9,6 +9,8 @@ include ../../../components/checkbox/checkbox.pug
   {mater_icon: "location_city", title: "Удобство", description: "Окно в каждой из спален"},
   {mater_icon: "whatshot", title: "Уют", description: "Номер оснащён камином"}]
 
+  const checkboxes = [{label: "Можно курить"},{label: "Можно с питомцами", isChecked: true},{label: "Можно пригласить гостей (до 10 человек)", isChecked: true}]
+
 doctype html
 html(lang="ru")
   head
@@ -19,4 +21,4 @@ html(lang="ru")
     title Form Elements
   body
     .test
-      +checkbox({label: "Можно курить"})
+      +checkbox(checkboxes)
