--- a/src/components/text-fields/text-fields.scss
+++ b/src/components/text-fields/text-fields.scss
@@ -1,4 +1,4 @@
-.text-field {
+.text-field, .subscription-text-field, .masked-text-field {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
