--- a/src/pages/UI-kit/Form-Elements/form-elements.scss
+++ b/src/pages/UI-kit/Form-Elements/form-elements.scss
@@ -1,7 +1,7 @@
 @import '../../../scss/fonts.scss';
 @import '../../../scss/colors.scss';
 @import '../../../components/logo/logo.scss';
-@import '../../../components/text-field/text-field.scss';
+@import '../../../components/text-fields/text-fields.scss';
 @import '../../../components/abouts-room/abouts-room.scss';
 @import '../../../components/checkbox/checkbox.scss';
 
@@ -10,5 +10,11 @@ body {
   margin: 0 auto;
 }
 .test{
-  width: 222px;
+  width: 320px;
+}
+.test1{
+  width: 320px;
+}
+.test2{
+  width: 267px;
 }
