--- a/src/pages/UI-kit/Form-Elements/form-elements.scss
+++ b/src/pages/UI-kit/Form-Elements/form-elements.scss
@@ -4,13 +4,14 @@
 @import '../../../components/text-fields/text-fields.scss';
 @import '../../../components/abouts-room/abouts-room.scss';
 @import '../../../components/checkbox/checkbox.scss';
+@import '../../../components/expandable-checkbox/expandable-checkbox.scss';
 
 body {
   max-width: 1440px;
   margin: 0 auto;
 }
 .test{
-  width: 320px;
+  width: 266px;
 }
 .test1{
   width: 320px;
