Finish expandable checkbox list

--- a/src/components/expandable-checkbox/expandable-checkbox.pug
+++ b/src/components/expandable-checkbox/expandable-checkbox.pug
@@ -3,6 +3,6 @@ mixin checkbox-list({title, checkbox_list})
   .checkbox-list
     .checkbox-list__wrapper
       .checkbox-list__title= title
-      .checkbox-list__arrow(class="checkbox-list__arrow_expanded") expand_more
-    .checkbox-list__checkboxes(class="checkbox-list__checkboxes_expanded")
+      .checkbox-list__arrow(class="") expand_more
+    .checkbox-list__checkboxes(class="")
       +checkbox(checkbox_list)
