--- a/src/pages/UI-kit/Form-Elements/form-elements.pug
+++ b/src/pages/UI-kit/Form-Elements/form-elements.pug
@@ -27,3 +27,6 @@ html(lang="ru")
   body
     .test
       +checkbox-list({title: "expandable checkbox list", checkbox_list: checkboxes_to_list})
+      +checkbox-list({title: "expandable checkbox list", checkbox_list: checkboxes_to_list})
+
+    script(src="./form-elements.js")
