--- a/src/pages/UI-kit/Form-Elements/form-elements.pug
+++ b/src/pages/UI-kit/Form-Elements/form-elements.pug
@@ -28,5 +28,6 @@ html(lang="ru")
     .test
       +checkbox-list({title: "expandable checkbox list", checkbox_list: checkboxes_to_list})
       +checkbox-list({title: "expandable checkbox list", checkbox_list: checkboxes_to_list})
+      +text-field({title: "hello"})
 
     script(src="./form-elements.js")
