--- a/src/components/expandable-checkbox/expandable-checkbox.pug
+++ b/src/components/expandable-checkbox/expandable-checkbox.pug
@@ -1,8 +1,13 @@
-mixin checkbox-list({title, checkbox_list})
+mixin checkbox-list({title, checkbox_list, isExpanded})
+
+  -
+    let expanded_mod = ""
+    if(isExpanded)
+      expanded_mod = "_expanded"
 
   .checkbox-list
     .checkbox-list__wrapper
       .checkbox-list__title= title
-      .checkbox-list__arrow(class="") expand_more
-    .checkbox-list__checkboxes(class="")
+      .checkbox-list__arrow(class="checkbox-list__arrow" + expanded_mod) expand_more
+    .checkbox-list__checkboxes(class="checkbox-list__checkboxes" + expanded_mod)
       +checkbox(checkbox_list)
