Add rate-button (without js)

--- a/src/components/text-fields/text-fields.pug
+++ b/src/components/text-fields/text-fields.pug
@@ -1,3 +1,7 @@
+//-
+  Можно 3 миксина сделать, можно через модификаторы и передавать параметром isSubscription, isMasked например. 
+  Не знал как лучше/правильнее или как вы потребуете. 
+  
 mixin text-field({title, subtitle, value, placeholder})
 
   .text-field
