--- a/src/pages/UI-kit/Form-Elements/form-elements.scss
+++ b/src/pages/UI-kit/Form-Elements/form-elements.scss
@@ -5,6 +5,7 @@
 @import '../../../components/abouts-room/abouts-room.scss';
 @import '../../../components/checkbox/checkbox.scss';
 @import '../../../components/expandable-checkbox/expandable-checkbox.scss';
+@import '../../../components/rate-button/rate-button.scss';
 
 body {
   max-width: 1440px;
