--- a/src/pages/UI-kit/Form-Elements/form-elements.scss
+++ b/src/pages/UI-kit/Form-Elements/form-elements.scss
@@ -7,6 +7,7 @@
 @import '../../../components/expandable-checkbox/expandable-checkbox.scss';
 @import '../../../components/rate-button/rate-button.scss';
 @import '../../../components/radio-button/radio-button.scss';
+@import '../../../components/toggle/toggle.scss';
 
 body {
   max-width: 1440px;
