--- a/src/pages/UI-kit/Form-Elements/form-elements.scss
+++ b/src/pages/UI-kit/Form-Elements/form-elements.scss
@@ -8,6 +8,7 @@
 @import '../../../components/rate-button/rate-button.scss';
 @import '../../../components/radio-button/radio-button.scss';
 @import '../../../components/toggle/toggle.scss';
+@import '../../../components/like-button/like-button.scss';
 
 body {
   max-width: 1440px;
