--- a/src/pages/UI-kit/Form-Elements/form-elements.pug
+++ b/src/pages/UI-kit/Form-Elements/form-elements.pug
@@ -7,6 +7,7 @@ include ../../../components/rate-button/rate-button.pug
 include ../../../components/radio-button/radio-button.pug
 include ../../../components/toggle/toggle.pug
 include ../../../components/like-button/like-button.pug
+include ../../../components/button/button.pug
 
 -
   const details = [
@@ -32,7 +33,9 @@ html(lang="ru")
     title Form Elements
   body
     .test
-      +like-button({count: "2"})
-      +like-button({count: "12", isLiked: true})
+      +button({color: "white", place: "inForm", text: "click me"})
+      +button({color: "purple", place: "inForm", text: "click me"})
+      +button({color: "white", place: "inHeader", text: "войти"})
+      +button({color: "purple", place: "inHeader", text: "зарегистрироваться"})
 
     script(src="./form-elements.js")
