--- a/src/pages/UI-kit/Form-Elements/form-elements.scss
+++ b/src/pages/UI-kit/Form-Elements/form-elements.scss
@@ -10,6 +10,7 @@
 @import '../../../components/toggle/toggle.scss';
 @import '../../../components/like-button/like-button.scss';
 @import '../../../components/button/button.scss';
+@import '../../../components/big-button/big-button.scss';
 
 body {
   max-width: 1440px;
