--- a/src/scss/colors.scss
+++ b/src/scss/colors.scss
@@ -7,3 +7,4 @@ $dark-shade-5: rgba(31, 32, 65, 0.05);
 $purple: #bc9cff;
 $purple-gradient: linear-gradient(180deg, #BC9CFF 0%, #8BA4F9 100%); 
 $green: #6fcf97;
+$green-gradient: linear-gradient(180deg, #6FCF97 0%, #66D2EA 100%);
