--- a/src/pages/UI-kit/Form-Elements/form-elements.scss
+++ b/src/pages/UI-kit/Form-Elements/form-elements.scss
@@ -11,13 +11,14 @@
 @import '../../../components/like-button/like-button.scss';
 @import '../../../components/button/button.scss';
 @import '../../../components/big-button/big-button.scss';
+@import '../../../components/pagination/pagination.scss';
 
 body {
   max-width: 1440px;
   margin: 0 auto;
 }
 .test{
-  width: 600px;
+  width: 241px;
   margin: 0;
 }
 .test1{
