--- a/src/pages/UI-kit/Form-Elements/form-elements.pug
+++ b/src/pages/UI-kit/Form-Elements/form-elements.pug
@@ -9,6 +9,7 @@ include ../../../components/toggle/toggle.pug
 include ../../../components/like-button/like-button.pug
 include ../../../components/button/button.pug
 include ../../../components/big-button/big-button.pug
+include ../../../components/pagination/pagination.pug
 
 -
   const details = [
@@ -34,6 +35,6 @@ html(lang="ru")
     title Form Elements
   body
     .test
-      +big-button({text: "Забронировать", isDisabled: true})
+      +pagination({caption: "1 – 12 из 100+ вариантов аренды"})
 
     script(src="./form-elements.js")
