--- a/src/pages/UI-kit/Form-Elements/form-elements.pug
+++ b/src/pages/UI-kit/Form-Elements/form-elements.pug
@@ -10,6 +10,7 @@ include ../../../components/like-button/like-button.pug
 include ../../../components/button/button.pug
 include ../../../components/big-button/big-button.pug
 include ../../../components/pagination/pagination.pug
+include ../../../components/rich-checkbox/rich-checkbox.pug
 
 -
   const details = [
@@ -25,6 +26,8 @@ include ../../../components/pagination/pagination.pug
 
   const rad_buttons = [{label: "Мужчина", isChecked: true},{label: "Женщина"}]
 
+  const rich_checkboxes = [{label: "Широкий коридор", description: "Ширина коридора в номере не менее 91 см."},{label: "Помощник для инвалидов", description: "На 1 этаже вас встретит специалист и проводит до номера"}]
+
 doctype html
 html(lang="ru")
   head
@@ -35,6 +38,6 @@ html(lang="ru")
     title Form Elements
   body
     .test
-      +pagination({caption: "1 – 12 из 100+ вариантов аренды"})
+      +rich-checkbox(rich_checkboxes)
 
     script(src="./form-elements.js")
