--- a/src/pages/UI-kit/Form-Elements/form-elements.scss
+++ b/src/pages/UI-kit/Form-Elements/form-elements.scss
@@ -12,13 +12,14 @@
 @import '../../../components/button/button.scss';
 @import '../../../components/big-button/big-button.scss';
 @import '../../../components/pagination/pagination.scss';
+@import '../../../components/rich-checkbox/rich-checkbox.scss';
 
 body {
   max-width: 1440px;
   margin: 0 auto;
 }
 .test{
-  width: 241px;
+  width: 260px;
   margin: 0;
 }
 .test1{
