--- a/src/pages/UI-kit/Form-Elements/form-elements.scss
+++ b/src/pages/UI-kit/Form-Elements/form-elements.scss
@@ -13,13 +13,14 @@
 @import '../../../components/big-button/big-button.scss';
 @import '../../../components/pagination/pagination.scss';
 @import '../../../components/rich-checkbox/rich-checkbox.scss';
+@import '../../../components/bullet-list/bullet-list.scss';
 
 body {
   max-width: 1440px;
   margin: 0 auto;
 }
 .test{
-  width: 260px;
+  width: 292px;
   margin: 0;
 }
 .test1{
