--- a/src/components/pagination/pagination.scss
+++ b/src/components/pagination/pagination.scss
@@ -9,6 +9,7 @@
     line-height: 40px;
     color: $dark-shade-50;
     text-align: center;
+    cursor: pointer;
     &:first-child{
       font-weight: bold;
       color: white;
