--- a/src/pages/UI-kit/Form-Elements/form-elements.pug
+++ b/src/pages/UI-kit/Form-Elements/form-elements.pug
@@ -41,6 +41,6 @@ html(lang="ru")
     title Form Elements
   body
     .test
-      +bullet-list(bullet_list)
+      +pagination({caption: "1 – 12 из 100+ вариантов аренды"})
 
     script(src="./form-elements.js")
