--- a/src/components/expandable-checkbox/expandable-checkbox.pug
+++ b/src/components/expandable-checkbox/expandable-checkbox.pug
@@ -5,9 +5,9 @@ mixin checkbox-list({title, checkbox_list, isExpanded})
     if(isExpanded)
       expanded_mod = "_expanded"
 
-  .checkbox-list
-    .checkbox-list__wrapper
+  .checkbox-list.js-checkbox-list
+    .checkbox-list__wrapper.js-checkbox-list__wrapper
       .checkbox-list__title= title
-      .checkbox-list__arrow(class="checkbox-list__arrow" + expanded_mod) expand_more
-    .checkbox-list__checkboxes(class="checkbox-list__checkboxes" + expanded_mod)
+      .checkbox-list__arrow.js-checkbox-list__arrow(class="checkbox-list__arrow" + expanded_mod) expand_more
+    .checkbox-list__checkboxes.js-checkbox-list__checkboxes(class="checkbox-list__checkboxes" + expanded_mod)
       +checkbox(checkbox_list)
