--- a/src/components/text-fields/text-fields.scss
+++ b/src/components/text-fields/text-fields.scss
@@ -14,6 +14,33 @@
     text-transform: uppercase;
     color: $dark-shade-50;
   }
+  &__button{
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 44px;
+    height: 44px;
+    font-family: $material-icons;
+    font-size: 24px;
+    background: $purple-gradient;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    color: $purple;
+    border: none;
+    cursor: pointer;
+    &-background{    // белая подложка под стрелку
+      background-color: white;
+      position: absolute;
+      top: 1px;
+      right: 1px;
+      width: 43px;
+      height: 42px;
+      border-radius: 4px;
+    }
+    &:hover ~ .subscription-text-field__input {
+      border-color: $dark-shade-50;
+    }
+  }
   &__input{
     outline: none;
     width: 100%;
@@ -38,30 +65,6 @@
     }
     &:hover {
       border-color: $dark-shade-50;
-    }
-  }
-  &__button{
-    position: absolute;
-    top: 0;
-    right: 0;
-    width: 44px;
-    height: 44px;
-    font-family: $material-icons;
-    font-size: 24px;
-    background: $purple-gradient;
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-    color: $purple;
-    border: none;
-    cursor: pointer;
-    &-background{    // белая подложка под стрелку
-      background-color: white;
-      position: absolute;
-      top: 1px;
-      right: 1px;
-      width: 43px;
-      height: 42px;
-      border-radius: 4px;
     }
   }
 }
