--- a/src/pages/UI-kit/Form-Elements/form-elements.scss
+++ b/src/pages/UI-kit/Form-Elements/form-elements.scss
@@ -14,20 +14,21 @@
 @import '../../../components/pagination/pagination.scss';
 @import '../../../components/rich-checkbox/rich-checkbox.scss';
 @import '../../../components/bullet-list/bullet-list.scss';
+@import '../../../components/dropdown/dropdown.scss';
 
 body {
   max-width: 1440px;
   margin: 0 auto;
 }
 .test{
-  width: 241px;
+  width: 266px;
   margin: 0;
 }
 .test1{
+  margin-top: 200px;
   width: 320px;
-  height: 20px;
-  background-color: purple;
 }
 .test2{
+  margin-top: 200px;
   width: 267px;
 }
