--- a/src/pages/UI-kit/Form-Elements/form-elements.pug
+++ b/src/pages/UI-kit/Form-Elements/form-elements.pug
@@ -32,7 +32,9 @@ include ../../../components/dropdown/dropdown.pug
   
   const bullet_list = ["Нельзя с питомцами", "Без вечеринок и мероприятий", "Время прибытия — после 13:00, а выезд до 12:00"]
 
-  const dropdown = [{name: "Спальни", value: "2", min: "0", max: "3"},{name: "Кровати", value: "2", min: "0", max: "4"},{name: "Ванные комнаты", value: "0", min: "0", max: "5"}]
+  const dropdown = [{name: "Спальни", nameForms: ["Спальня","Спальни","Спален"], value: "2", min: "0", max: "5"},
+                    {name: "Кровати", nameForms: ["Кровать","Кровати","Кроватей"], value: "2", min: "0", max: "5"},
+                    {name: "Ванные комнаты",  nameForms: ["Ванная комната","Ванных комнаты","Ванных комнат"], value: "0", min: "0", max: "5"}]
 
   const dropdown1 = [{name: "Взрослые", value: "0", min: "0", max: "1"},{name: "Дети", value: "1", min: "0", max: "2"},{name: "Младенцы", value: "0", min: "0", max: "3"}]
 
@@ -48,6 +50,6 @@ html(lang="ru")
     .test
       +dropdown({title: "dropdown", elements: dropdown, resultDefault: "Сколько комнат"})
     .test1
-      +dropdown({title: "dropdown", elements: dropdown1, buttons: true, resultDefault: "Сколько гостей"})
+      +dropdown({title: "dropdown", elements: dropdown1, buttons: true, resultDefault: "Сколько гостей", keyWords: ["гость","гостя","гостей"]})
     .test2
     script(src="./form-elements.js")
