--- a/src/components/expandable-checkbox/expandable-checkbox.pug
+++ b/src/components/expandable-checkbox/expandable-checkbox.pug
@@ -1,13 +1,13 @@
-mixin checkbox-list({title, checkbox_list, isExpanded})
+mixin expandable-checkbox({title, checkboxList, isExpanded})
 
   -
     let expanded_mod = ""
     if(isExpanded)
       expanded_mod = "_expanded"
 
-  .checkbox-list.js-checkbox-list
-    .checkbox-list__wrapper.js-checkbox-list__wrapper
-      .checkbox-list__title= title
-      .checkbox-list__arrow.js-checkbox-list__arrow(class="checkbox-list__arrow" + expanded_mod) expand_more
-    .checkbox-list__checkboxes.js-checkbox-list__checkboxes(class="checkbox-list__checkboxes" + expanded_mod)
-      +checkbox(checkbox_list)
+  .expandable-checkbox.js-expandable-checkbox
+    .expandable-checkbox__wrapper.js-expandable-checkbox__wrapper
+      .expandable-checkbox__title= title
+      .expandable-checkbox__arrow.js-expandable-checkbox__arrow(class="expandable-checkbox__arrow" + expanded_mod) expand_more
+    .expandable-checkbox__checkboxes.js-expandable-checkbox__checkboxes(class="expandable-checkbox__checkboxes" + expanded_mod)
+      +checkbox(checkboxList)
