--- a/src/pages/UI-kit/Form-Elements/form-elements.pug
+++ b/src/pages/UI-kit/Form-Elements/form-elements.pug
@@ -15,20 +15,19 @@ include ../../../components/bullet-list/bullet-list.pug
 include ../../../components/dropdown/dropdown.pug
 
 -
-  const details = [
-  {mater_icon: "insert_emoticon", title: "Комфорт", description: "Шумопоглащающие стены"},
-  {mater_icon: "location_city", title: "Удобство", description: "Окно в каждой из спален"},
-  {mater_icon: "whatshot", title: "Уют", description: "Номер оснащён камином"}]
+  const details = [{mater_icon: "insert_emoticon", title: "Комфорт", description: "Шумопоглащающие стены"},
+                  {mater_icon: "location_city", title: "Удобство", description: "Окно в каждой из спален"},
+                  {mater_icon: "whatshot", title: "Уют", description: "Номер оснащён камином"}]
 
   const checkboxes = [{label: "Можно курить"},{label: "Можно с питомцами", isChecked: true},{label: "Можно пригласить гостей (до 10 человек)", isChecked: true}]
 
-  const checkboxes_to_list = [
-  {label: "Завтрак"},{label: "Письменный стол", isChecked: true},{label: "Стул для кормления", isChecked: true},
-  {label: "Кроватка", isChecked: true},{label: "Телевизор"},{label: "Шампунь"},{label: "Телевизор"},{label: "Шампунь"}]
+  const checkboxes_to_list = [{label: "Завтрак"},{label: "Письменный стол", isChecked: true},{label: "Стул для кормления", isChecked: true},
+                              {label: "Кроватка", isChecked: true},{label: "Телевизор"},{label: "Шампунь"},{label: "Телевизор"},{label: "Шампунь"}]
 
   const rad_buttons = [{label: "Мужчина", isChecked: true},{label: "Женщина"}]
 
-  const rich_checkboxes = [{label: "Широкий коридор", description: "Ширина коридора в номере не менее 91 см."},{label: "Помощник для инвалидов", description: "На 1 этаже вас встретит специалист и проводит до номера"}]
+  const rich_checkboxes = [{label: "Широкий коридор", description: "Ширина коридора в номере не менее 91 см."},
+                          {label: "Помощник для инвалидов", description: "На 1 этаже вас встретит специалист и проводит до номера"}]
   
   const bullet_list = ["Нельзя с питомцами", "Без вечеринок и мероприятий", "Время прибытия — после 13:00, а выезд до 12:00"]
 
@@ -52,4 +51,9 @@ html(lang="ru")
     .test1
       +dropdown({title: "dropdown", elements: dropdown1, buttons: true, resultDefault: "Сколько гостей", keyWords: ["гость","гостя","гостей"]})
     .test2
+      +expandable-checkbox({title: "sad", checkboxList: checkboxes_to_list})
+      +expandable-checkbox({title: "sadaaaa", checkboxList: checkboxes_to_list})
+      
+      +like-button({count: 15})
+      +like-button({count: 12})
     script(src="./form-elements.js")
